# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2016-08-03 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add Java CloudI API timestamp accessor for ISO8601 SQL variation

2016-08-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add Java CloudI API accessors on the TransId class to get
      the timestamp when the service request was created

2016-07-27 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Allow internal CloudI services to optionally use the callbacks
      cloudi_service_handle_request/11 and
      cloudi_service_handle_info/3
    * Update pqueue

2016-07-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update erlcloud

2016-07-06 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Simplify logger module creation

2016-06-28 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add directory external service configuration option to set the 
      current working directory for the external service OS process

2016-06-26 Michael Truog   <mjtruog [at] gmail (dot) com>

    * No longer use the dynamic_compile dependency in the cloudi_core logger
      (instead rely on merl)
    * Switch to requiring Erlang >= 18.0 due to merl in syntax_tools
    * Update proper

2016-06-22 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Make the Java CloudI API TransId class publicly accessible and
      add a conversion to a UUID object
    * Java CloudI API standard streams now use UTF8
    * Fix owner service configuration option usage

2016-06-18 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update mimetypes

2016-06-15 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add string UUID formatting for the services_update result in
      cloudi_service_api_requests
    * Update cpg README

2016-06-05 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Improve cloudi_service_api:aspect_log_f() type
    * Add define specifically for cloudi_core_i_socket usage
