@@ -4,6 +4,7 @@
 2016-08-03 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Add Java CloudI API timestamp accessor for ISO8601 SQL variation
+    * Add Java CloudI API timestamp accessor for a microseconds integer value
 
 2016-08-02 Michael Truog   <mjtruog [at] gmail (dot) com>
 
